tests/NormalTests/paczka1/fuzzy1/13239403.err
Error in line 4: S499 S499 82,7
Error in line 15: qzLMg 447 51,6
Error in line 25: 1TMhCyO3oj S499 46,3
Error in line 29: S499 S449 16,6
Error in line 31: 1TMhCyO3oj S449 70,7
